--- a/index.html
+++ b/index.html
@@ -673,6 +673,23 @@
           </div>
         </article>
 
+         <div class="grid">
+        <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Advanced Combat System</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>Systems · Combat · Anime</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>An advanced combat system built with precision and responsiveness, featuring fluid animations, combo mechanics, and intelligent enemy behavior. Designed to deliver engaging and dynamic gameplay experiences.</p>
+          </div>
+          <div class="video" aria-label="Advanced Combat System video">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/szvopy"></iframe>
+          </div>
+        </article>
+
         <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -1094,3 +1111,4 @@
   </script>
 </body>
 </html>
+
