--- a/index.html
+++ b/index.html
@@ -673,28 +673,11 @@
           </div>
         </article>
 
-         <div class="grid">
         <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
             <div>
-              <h4>Advanced Combat System</h4>
-              <div class="tag"><span class="dot" aria-hidden="true"></span>Systems · Combat · Anime</div>
-            </div>
-          </div>
-          <div class="cardBody">
-            <p>An advanced combat system built with precision and responsiveness, featuring fluid animations, combo mechanics, and intelligent enemy behavior. Designed to deliver engaging and dynamic gameplay experiences.</p>
-          </div>
-          <div class="video" aria-label="Advanced Combat System video">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/szvopy"></iframe>
-          </div>
-        </article>
-
-        <article class="card reveal tilt" data-tilt>
-          <div class="shine" aria-hidden="true"></div>
-          <div class="cardTop">
-            <div>
-              <h4>Waterbending Sword</h4>
+              <h4>Waterbending</h4>
               <div class="tag"><span class="dot" aria-hidden="true"></span>VFX · Combat · Timing</div>
             </div>
           </div>
@@ -703,6 +686,22 @@
           </div>
           <div class="video" aria-label="Waterbending video">
             <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/5h8d89"></iframe>
+          </div>
+        </article>
+
+           <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Advanced Combat System</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>System · Combat · Anime</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>An advanced combat system built with precision and responsiveness, featuring fluid animations, combo mechanics, and intelligent enemy behavior. Designed to deliver engaging and dynamic gameplay experiences.</p>
+          </div>
+          <div class="video" aria-label="Advanced Combat System video">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/szvopy"></iframe>
           </div>
         </article>
 
@@ -1111,4 +1110,3 @@
   </script>
 </body>
 </html>
-
