--- a/index.html
+++ b/index.html
@@ -721,6 +721,14 @@
           </div>
         </article>
 
+            <section id="VFX">
+      <div class="sectionHeader reveal">
+        <div>
+          <h3>Featured VFX Works</h3>
+          <p>These are portfolio-ready demos focused on gameplay feel, clarity, and hire-ready presentation.</p>
+        </div>
+      </div>
+              
       <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -1110,3 +1118,4 @@
   </script>
 </body>
 </html>
+
