--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
             <p>An advanced combat system built with precision and responsiveness, featuring fluid animations, combo mechanics, and intelligent enemy behavior. Designed to deliver engaging and dynamic gameplay experiences.</p>
           </div>
           <div class="video" aria-label="Advanced Combat System video">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/szvopy"></iframe>
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/szvopy"></iframe>
           </div>
         </article>
 
@@ -721,14 +721,6 @@
           </div>
         </article>
 
-            <section id="VFX">
-      <div class="sectionHeader reveal">
-        <div>
-          <h3>Featured VFX Works</h3>
-          <p>These are portfolio-ready demos focused on gameplay feel, clarity, and hire-ready presentation.</p>
-        </div>
-      </div>
-              
       <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -741,7 +733,7 @@
             <p>A brief flash of fire designed for fast, responsive abilities.</p>
           </div>
           <div class="video" aria-label="Simple Fire Burst VFX">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/p7y05e"></iframe>
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/p7y05e"></iframe>
           </div>
         </article>
 
@@ -757,7 +749,7 @@
             <p>A steady aura of energy that surrounds the user, gently pulsing with power.</p>
           </div>
           <div class="video" aria-label="Aura VFX">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/fhpwjz"></iframe>
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/fhpwjz"></iframe>
           </div>
         </article>
 
@@ -773,7 +765,7 @@
             <p>A writhing aura of dark green energy that lashes outward like living tendrils, crackling with raw power.</p>
           </div>
           <div class="video" aria-label="Deku Black Whip VFX">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/hxgzlm"></iframe>
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/hxgzlm"></iframe>
           </div>
         </article>
 
@@ -789,7 +781,7 @@
             <p>A burst of heavy smoke that quickly spreads, then fades away without a trace.</p>
           </div>
           <div class="video" aria-label="Vanishing Smoke VFX">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/fns6it"></iframe>
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/fns6it"></iframe>
           </div>
         </article>
 
@@ -806,7 +798,7 @@
             <p>A bright flash of light bursts on impact, emphasizing the hit with a sharp visual pop.</p>
           </div>
           <div class="video" aria-label="Shiny Hit VFX">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/kalt2w"></iframe>
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/kalt2w"></iframe>
           </div>
         </article>
 
@@ -890,11 +882,12 @@
           <div style="font-weight:900; letter-spacing:-.2px; font-size:15px">Contact</div>
           <div class="line"></div>
           <p style="margin:0; color:var(--mut); font-size:13.5px; line-height:1.7">
-            Add your preferred contact handles below (Discord, X, email, Roblox profile). The buttons are ready to wire up.
+           Contact me!
           </p>
           <div class="line"></div>
           <div class="row">
             <a class="chip" href="#" role="button">Discord: @not_mo34506</a>
+            <a class="chip" href="#" role="button">Discord Portfolio Server: https://discord.gg/jVCTuQzBFq</a>
             <a class="chip" href="#" role="button">Roblox: voetplayz</a>
             <a class="chip" href="#" role="button">Email: mo.mohammad20100@gmail.com</a>
           </div>
