--- a/index.html
+++ b/index.html
@@ -721,6 +721,20 @@
           </div>
         </article>
 
+
+
+            <section id="work">
+      <div class="sectionHeader reveal">
+        <div>
+          <h3>Featured Work</h3>
+          <p>These are portfolio-ready demos focused on gameplay feel, clarity, and hire-ready presentation.</p>
+        </div>
+      </div>
+
+
+
+              
+
       <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -1111,4 +1125,5 @@
   </script>
 </body>
 </html>
+
 
