--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
       </div>
     </section>
 
-               <section id="work">
+               <section id="vfxwork">
       <div class="sectionHeader reveal">
         <div>
           <h3>Featured VFX Work</h3>
@@ -750,6 +750,23 @@
           </div>
           <div class="video" aria-label="Simple Fire Burst VFX">
             <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/p7y05e"></iframe>
+          </div>
+        </article>
+
+                       <div class="grid">
+        <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Advanced Cosmetic System</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>Systems · UX · Data</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>Cosmetics that look and feel expensive: smooth previewing, clean organization, and player-friendly flow built for scale.</p>
+          </div>
+          <div class="video" aria-label="Advanced Cosmetic System video">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/ajv08o"></iframe>
           </div>
         </article>
 
@@ -1126,6 +1143,7 @@
   </script>
 </body>
 </html>
+
 
 
 
