--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
       <div class="sectionHeader reveal">
         <div>
           <h3>Featured Work</h3>
-          <p>These are portfolio-ready demos focused on gameplay feel, clarity, and hire-ready presentation.</p>
+          <p>Structured systems focused on functionality and optimization.</p>
         </div>
       </div>
 
@@ -723,20 +723,18 @@
 
 
 
-
-
       </div>
     </section>
 
                <section id="vfxwork">
       <div class="sectionHeader reveal">
         <div>
-          <h3>Featured VFX Work</h3>
-          <p>These are portfolio-ready demos focused on gameplay feel, clarity, and hire-ready presentation.</p>
+          <h3>Featured Visual Effects Work</h3>
+          <p>High-impact VFX designed for smooth, immersive experiences.</p>
         </div>
       </div>
     
-
+     <div class="grid">
       <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -750,23 +748,6 @@
           </div>
           <div class="video" aria-label="Simple Fire Burst VFX">
             <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/p7y05e"></iframe>
-          </div>
-        </article>
-
-                       <div class="grid">
-        <article class="card reveal tilt" data-tilt>
-          <div class="shine" aria-hidden="true"></div>
-          <div class="cardTop">
-            <div>
-              <h4>Advanced Cosmetic System</h4>
-              <div class="tag"><span class="dot" aria-hidden="true"></span>Systems · UX · Data</div>
-            </div>
-          </div>
-          <div class="cardBody">
-            <p>Cosmetics that look and feel expensive: smooth previewing, clean organization, and player-friendly flow built for scale.</p>
-          </div>
-          <div class="video" aria-label="Advanced Cosmetic System video">
-            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/ajv08o"></iframe>
           </div>
         </article>
 
@@ -1143,6 +1124,7 @@
   </script>
 </body>
 </html>
+
 
 
 
