--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
     <section id="work">
       <div class="sectionHeader reveal">
         <div>
-          <h3>Featured Work</h3>
+          <h3>Featured Scripting Works</h3>
           <p>Structured systems focused on functionality and optimization.</p>
         </div>
       </div>
@@ -1124,6 +1124,7 @@
   </script>
 </body>
 </html>
+
 
 
 
