--- a/index.html
+++ b/index.html
@@ -705,6 +705,40 @@
           </div>
         </article>
 
+             <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Advanced FPS System</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>System · Combat · FPS</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>A fully featured FPS system built for responsive, fluid gunplay. Includes smooth first-person handling, recoil, shooting mechanics, and reliable hit detection, all designed to feel consistent and satisfying during fast-paced combat.</p>
+          </div>
+          <div class="video" aria-label="Advanced FPS System video">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/pws8i7"></iframe>
+          </div>
+        </article>
+
+
+        
+             <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Advanced Rover System</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>System · Robot · Control · Remote</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>An advanced rover system featuring realistic movement, suspension, and terrain interaction. Designed for smooth control over varied environments, with physics-based handling and responsive navigation.</p>
+          </div>
+          <div class="video" aria-label="Advanced Rover System video">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/wjyj3k"></iframe>
+          </div>
+        </article>
+
         <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -1124,6 +1158,7 @@
   </script>
 </body>
 </html>
+
 
 
 
