--- a/index.html
+++ b/index.html
@@ -785,6 +785,23 @@
           </div>
         </article>
 
+            <div class="grid">
+      <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Simple Shine VFX</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>VFX · Shine · Energy · Particles</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>A dynamic visual effect designed to add sparkle, glow, ,shine and polish to any scene.</p>
+          </div>
+          <div class="video" aria-label="Simple Shine VFX">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/f6uln6"></iframe>
+          </div>
+        </article>
+
       <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -1158,6 +1175,7 @@
   </script>
 </body>
 </html>
+
 
 
 
