--- a/index.html
+++ b/index.html
@@ -673,6 +673,22 @@
           </div>
         </article>
 
+         <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Advanced Black Hole Event</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>Events · BlackHole · VFX · FX</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>An interactive system where a massive black hole emerges, pulling players toward it in real time. Built with custom scripting, dynamic physics, and immersive effects, this system showcases advanced game mechanics, player interaction, and event-driven programming.</p>
+          </div>
+          <div class="video" aria-label="Advanced Black Hole Event video">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/5bi857"></iframe>
+          </div>
+        </article>
+
         <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -1175,6 +1191,7 @@
   </script>
 </body>
 </html>
+
 
 
 
