--- a/index.html
+++ b/index.html
@@ -886,6 +886,39 @@
       </div>
     </section>
 
+
+  <section id="graphicswork">
+      <div class="sectionHeader reveal">
+        <div>
+          <h3>Featured Graphics Works</h3>
+          <p>I’m a beginner graphic designer learning logo and text design. I enjoy experimenting with typography, colors, and simple layouts while improving my design skills. This portfolio shows my progress, creativity, and passion for learning and growing as a designer.</p>
+        </div>
+      </div>
+    
+
+
+ <article class="card reveal tilt" data-tilt>
+          <div class="shine" aria-hidden="true"></div>
+          <div class="cardTop">
+            <div>
+              <h4>Anime Legends Logo</h4>
+              <div class="tag"><span class="dot" aria-hidden="true"></span>Anime · Graphics · Logos · Text</div>
+            </div>
+          </div>
+          <div class="cardBody">
+            <p>This is a basic graphic piece made while learning graphic design. I focused on keeping it simple and clean while practicing text design.</p>
+          </div>
+          <div class="video" aria-label="Anime Legends Graphic Text">
+            <iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen src="https://streamable.com/e/7rzyim"></iframe>
+          </div>
+        </article>
+
+
+    
+      </div>
+    </section>
+
+
     <section id="skills">
       <div class="sectionHeader reveal">
         <div>
@@ -1191,3 +1224,4 @@
   </script>
 </body>
 </html>
+
