--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
       </div>
     
 
-
+  <div class="grid">
  <article class="card reveal tilt" data-tilt>
           <div class="shine" aria-hidden="true"></div>
           <div class="cardTop">
@@ -1224,4 +1224,5 @@
   </script>
 </body>
 </html>
+
 
